# CiPhyxs

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  SECURITY.md  quick_perf.cpp  test_convexmesh.cpp  test_dbvt.cpp  test_joints.cpp  test_ragdoll.cpp  test_softbody.cpp  test_taskgraph.cpp  test_trimesh.cpp  test_vehicle.cpp
.github/workflows/: ci.yml
CiPhyxsbuild/: CMakeCache.txt
CiPhyxsbuild2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
CiPhyxsbuild_release/: CMakeCache.txt
Stress_Tests/: CCDConvexMeshTest.cpp  ChaosDensityDiag.cpp  ChaosDensityTest.cpp  DebugTaskGraph.cpp  DeepStackTest.cpp  DeterminismTest.cpp  ExtremeCcdTest.cpp  LowEndBenchmark.cpp  MultibodyCrashTest.cpp  QuickBench.cpp  StressTestBase.hpp  TunnelingTest.cpp
Tests/: debug_vehicle.cpp  test_alignment.cpp  test_ccd.cpp  test_character.cpp  test_collision.cpp  test_contactreduction.cpp  test_convexmesh.cpp  test_dbvt.cpp  test_final.cpp  test_fracture.cpp  test_new_features.cpp  test_parallel.cpp  test_sap.cpp  test_softbody.cpp  test_taskgraph.cpp  test_trimesh.cpp
__cmake_systeminformation/: CMakeCache.txt
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/ciphyxs/: CiPhyxs.hpp
include/ciphyxs/collision/: Broadphase.hpp  Bvh.hpp  Contact.hpp  ContactReduction.hpp  Continuous.hpp  Convex.hpp  Dbvt.hpp  Fracture.hpp  Narrowphase.hpp  Ray.hpp  Shape.hpp  SimdBatch.hpp  SpatialHash.hpp  SweepAndPrune.hpp
include/ciphyxs/core/: AggressiveMode.hpp  AlignedAllocator.hpp  Assert.hpp  CharacterController.hpp  ConstraintSolver.hpp  DebugRenderer.hpp  IslandSolver.hpp  Joint.hpp  JointSolver.hpp  PhysicsWorld.hpp  Ragdoll.hpp  RigidBody.hpp  SoftBody.hpp  TaskGraph.hpp  ThreadPool.hpp
include/ciphyxs/math/: Mat3.hpp  Quaternion.hpp  SimdIntegration.hpp  Vec3.hpp
include/ciphyxs/solver/: Vehicle.hpp
